[gd_scene load_steps=4 format=3 uid="uid://bsy3ey5t1f330"]

[ext_resource type="PackedScene" uid="uid://dmewrmmemq5x5" path="res://scenes/world/ui/game_over/scenette/scenette.tscn" id="1_leb8v"]
[ext_resource type="Script" path="res://scenes/world/ui/game_over/game_over.gd" id="1_uknrb"]

[sub_resource type="World3D" id="World3D_8muvn"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uknrb")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
world_3d = SubResource("World3D_8muvn")
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Scenette" parent="SubViewportContainer/SubViewport" instance=ExtResource("1_leb8v")]
unique_name_in_owner = true

[node name="HLayout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="HLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="HLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Layout" type="VBoxContainer" parent="HLayout/PanelContainer"]
layout_mode = 2

[node name="LblTitle" type="Label" parent="HLayout/PanelContainer/Layout"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Some Title
"

[node name="PanelContainer" type="PanelContainer" parent="HLayout/PanelContainer/Layout"]
layout_mode = 2
size_flags_vertical = 3

[node name="RLblBody" type="RichTextLabel" parent="HLayout/PanelContainer/Layout/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
text = "Some [b]really[/b] spiffy text!!"

[node name="Buttons" type="HBoxContainer" parent="HLayout/PanelContainer/Layout"]
layout_mode = 2

[node name="Spacer1" type="Control" parent="HLayout/PanelContainer/Layout/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BtnClose" type="Button" parent="HLayout/PanelContainer/Layout/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[node name="Spacer2" type="Control" parent="HLayout/PanelContainer/Layout/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HLayout/PanelContainer/Layout/Buttons/BtnClose" to="." method="_on_btn_close_pressed"]
